--- a/style.css
+++ b/style.css
@@ -13,3 +13,16 @@
     background-color: #ffff;
     border-radius: 30%;
  }
+nav.navbar{
+    border-bottom: 1.5px solid rgb(198, 196, 196);
+}
+.options:hover{
+    color: rgb(36, 36, 155);
+    cursor: pointer;
+}
+.categories-list{
+    cursor: pointer;
+}
+.categories-list>p:hover{
+    color: aquamarine;
+}
