Product section - Tablet section, Job section, audios section

--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 .options p i{
     /* background-color: rgba(231, 229, 229, 0.959); */
     background: radial-gradient(circle at 18.7% 37.8%, rgb(250, 250, 250) 0%, rgb(225, 234, 238) 90%);
@@ -25,4 +30,9 @@ nav.navbar{
 }
 .categories-list>p:hover{
     color: aquamarine;
+}
+.card img{
+    width: 100% !important;
+    height: 200px;
+    background-size: cover;
 }
